Fix error that absolutely positioned labels wrapping input type radio or checkbox

--- a/src/index.css
+++ b/src/index.css
@@ -214,11 +214,14 @@ p.price .woocommerce-Price-amount.amount {
 .form-row label {
 	flex-shrink: 0;
 	margin-right: 1em;
-	position: absolute;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
+}
+
+.form-row label.placeholder {
+	position: absolute;
 }
 
 .form-row label.u-hidden {
